--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.13.6",
     "multer": "^1.4.3",
     "nodemon": "^2.0.12",
+    "uuid": "^8.3.2",
     "xls-to-json": "^2.1.0",
     "xlsx-to-json": "^0.3.0"
   }
